
(281) Some steps toward compilation under MinGW. Note that there are still
linking troubles for the examples.

(282) Remove wrong "execute" bits when creating a distribution. This
fixes bug #961938 (Executable bit set on non exe files).

(283) Partial fixes for bug #1218900 (freeglut-2.4.0 on FreeBSD).

(284) Handle modifiers in MotionNotify events, too. This fixes bug
#1227920 (glutGetModifiers not set/allowed in mouse callbacks). In
addition, some related cleanup has been done.

(285) X11 only: Free XVisualInfo structures when they are not needed
anymore, fixing a space leak. Not perfect for menus yet...

(286) X11 only: Destroy the global menu rendering context when
deinitializing. The visual/context handling for menus is still rather
obscure, though...

(287) Removed redundant code.

(288) We only have pending redisplay callbacks when the window wants to be
redisplayed *and* it is visible. Otherwise we won't redraw, anyway, and
immediately discover that there's still something to do, etc. etc., leading
to 100% CPU load.

(289) Made a few global arrays "static", avoiding namespace pollution. The
only externally visible symbols should either be from the GLUT API
("glutXXX") or internal freeglut entities ("fgYYY"). Reformatted things a
bit on the way.

(290) Made all the "glutJoystickXXX" functions part of the freeglut
extensions.

(291) Solaris doesn't have cfmakeraw, but it is only a convenience function
for some bit-fiddling, anyway.

(292) Avoid gcc warnings for some joystick code (e.g. on Solaris).

(293) Improve autoconf magic: To detect headers like GL/gl.h, it might be
necessary to temporarily use the X11 flags found by AC_PATH_XTRA.

(294) Fixed the GLUT_CURSOR_INHERIT logic once again...

(295) Synched the DLL definitions with reality.

**************************************************************************
* Changes on August 31, 2005.
**************************************************************************

(296) Added support for Open Watcom